--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@ Dia mempunyai minat dengan komputer dan elektronika dan telah mengenal komputer 
 <br/><br/>
 <br/><br/>
 <br/><br/>
+<h3>Resume</h3>
+<p><b>Pemrograman web</b> diambil dari 2 suku kata yaitu pemrograman dan web. Pemrograman yang dalam bahasa inggris adalah programming dan diartikan proses, cara, atau perbuatan program (secara bahasa indonesia).</p>
+<p>Halaman Web merupakan file teks murni (plain text) yang berisi sintaks-sintaks HTML yang dapat dibuka/ dilihat/ diterjemahkan dengan Internet Browser. 
+Sintaks HTML mampu memuat konten text, gambar, audio, video dan animasi. Kini internet identik dengan web, karena kepopuleran web sebagai standar interface pada layanan-layanan yang ada di internet, dari awalnya sebagai penyedia informasi, ini digunakan juga untuk komunikasi dari email sampai dengan chatting, sampai dengan melakukan transaksi bisnis (commerce)</p>
+<p>Banyak keuntungan yang diberikan oleh Aplikasi berbasis Web dari pada aplikasi berbasis destop, sehingga aplikasi berbasis web telah diadopsi oleh perusahaan sebagai bagian dari strategi teknologi informasinya, karena beberapa alasan:
+</p>
+<ul>
+    <li>Akses informasi mudah</li>
+    <li>Setup server lebih mudah</li>
+    <li>Informasi mudah didistribusikan</li>
+    <li>Bebas platform</li>
+    <li>Informasi dapat di sajikan oleh browser web pada sistem operasi mana saja karena adanya standar dokumen berbagai tipe data dapat disajikan</li</p> 
+</ul>
 <br/><br/><br/>
 <br/><br/>
 <br/><br/>
@@ -127,8 +140,10 @@ Dia mengikuti banyak pengerjaan proyek-proyek kecil diantaranya pengerjaan alat 
 <br/>
 <br/>
 <br/>
+<div class="miring2">
 <div class="putar">
   <img src="20170705_161735.jpg"  width=300px; height=300px;/>
+</div>
 </div>
 <br/>
 <br/>
