--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Dia mengikuti banyak pengerjaan proyek-proyek kecil diantaranya pengerjaan alat 
 <br/>
 <br/>
 <div class="putar">
-  <img src="Screenshot_20170926-202309.png"  width=300px; height=300px;/>
+  <img src="Screenshot_20170926-202309.jpg"  width=300px; height=300px;/>
 </div>
 </div>
 </section>
