--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Hananbhogayata/QuizUp"
+                  <a aria-label="Visit the GitHub repo for  project" href=#
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -859,23 +859,23 @@
               aria-label="Call Hanan">+6281314186589</a></a>
         </p>
         <p>
-          <a aria-label="Email Hanan" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Hanan" href="mailto:abiyyihanan@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Hanan" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Hanan" href="mailto:vbhogayata@gmail.com"
+              class="fa fa-envelope"></i><a aria-label="Email Hanan" href="abiyyihanan@gmail.com"
               class="hoverline">abiyyihanan@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Hanan on GitHub" href="http://github.com/Hananbhogayata" target="_blank"
+          <a aria-label="View Hanan on GitHub" href="http://github.com/userid7" target="_blank"
             data-position="top" data-tooltip="View Hanan on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Hanan on Github" href="http://github.com/Hananbhogayata" class="hoverline"
+              aria-label="Hanan on Github" href="http://github.com/userid7" class="hoverline"
               target="_blank">github.com/userid7</a></a>
         </p>
         <p>
-          <a aria-label="View Hanan on LinkedIn" href="http://linkedin.com/in/Hananbhogayata" target="_blank"
+          <a aria-label="View Hanan on LinkedIn" href="http://linkedin.com/in/hanan-abiyyi-954267176" target="_blank"
             data-position="top" data-tooltip="View Hanan on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Hanan on LinkedIn" href="http://linkedin.com/in/Hananbhogayata"
+              class="fa fa-linkedin"></i><a aria-label="Hanan on LinkedIn" href="http://linkedin.com/in/hanan-abiyyi-954267176"
               class="hoverline" target="_blank">linkedin.com/in/hananabiyyi</a></a>
         </p>
       </div>
