--- a/kranrayhana11/index.html
+++ b/kranrayhana11/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
   <title>keran_rayhana</title>
   <link rel="manifest" href="manifest.json">
